# esp32-rust-playground

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  export-esp.sh
.cargo/: config.toml
data/img/: angry.raw  awake.raw  broken.raw  cool.raw  excited.raw  lonely.raw  look_l.raw  look_l_happy.raw  look_r.raw  motivated.raw  smart.raw  upload.raw  upload_1.raw  upload_2.raw
data/img/raw/: bored.raw  debug.raw  demotivated.raw  friend.raw  grateful.raw  happy.raw  intense.raw  look_r_happy.raw  sad.raw  sleep.raw  sleep2.raw
src/: faces.rs  main.rs  tamagotchi.rs  wifi.rs
src/tamagotchi/: display.rs  faces.rs  rtc.rs  wifi.rs
