[package]
name = "tamagotchi"
version = "0.1.0"
authors = ["Dmitry Makarenko <noodlensk@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-sys = { version = "0.31.11", features = ["binstart"] }
esp-idf-hal = { version = "0.39.3" }
dummy-pin = "0.1.1"
embedded-graphics = "0.7.1"
embedded-hal = "1.0.0-alpha.9"
epd-waveshare = { path = "../epd-waveshare" }
display-interface-spi = { version = "0.4.1" }
ieee80211 = { git = "https://github.com/SpiralP/rust-ieee80211", branch = "master" }

[build-dependencies]
embuild = "0.30"
anyhow = "1"

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
